--- a/01-blog-personal/index.html
+++ b/01-blog-personal/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Blog Personal" content="El blog personal del Max">
+    <meta name="description" content="El blog personal del Max">
     <title>Blog Personal Max Martínez</title>
     <meta name="author" content="Max Martínez">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
