Modificacio Index Principal

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <li>
             <a href="./02-revista-online/index.html">02-Revista-Online</a>
           </li>
+          <li>
+            <a href="./03-horari-classe/index.html">03-Horari-Classe</a>
+          </li>
         </ul>
       </nav>
     </main>
