--- a/03-horari-classe/index.html
+++ b/03-horari-classe/index.html
@@ -7,6 +7,7 @@
     <title>Horari Classe</title>
     <meta name="author" content="Max Martínez">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
     <header>
@@ -39,52 +40,85 @@
       <table>
         <caption>Horari de 1r ASIX</caption>
         <thead>
-          <th>
-            Dilluns
-          </th>
-          <th>
-            Dimarts
-          </th>
-          <th>
-            Dimecres
-          </th>
-          <th>
-            Dijous
-          </th>
-          <th>
-            Divendres
-          </th>
+          <tr>
+            <th>Hora</th>
+            <th>Dilluns</th>
+            <th>Dimarts</th>
+            <th>Dimecres</th>
+            <th>Dijous</th>
+            <th>Divendres</th>
+          </tr>
         </thead>
         <tbody>
-          <th>
-            15:00
-          </th>
-          <th>
-            16:00
-          </th>
-          <th>
-            17:00
-          </th>
-          <th>
-            17:20
-          </th>
-          <th>
-            18:20
-          </th>
-          <th>
-            19:20
-          </th>
-          <th>
-            20:20
-          </th>
+          <tr>
+            <th>15:00</th>
+            <td rowspan="2">0373<br><strong>Llenguatge de marques i SGE</strong><br><em>Xavi
+                Garcia</em><br>Aula 101
+            </td>
+            <td rowspan="2">Lliure</td>
+            <td>Lliure</td>
+            <td rowspan="2">1709<br><strong>Gestió de bases de dades</strong><br><em>Julián
+                Garcia</em><br>Aula 101
+            </td>
+            <td rowspan="2">0369<br><strong>Implantació de sistemes
+                informàtics</strong><br><em>Ferran Sanabria</em><br>Aula 101</td>
+          </tr>
+          <tr>
+            <th>16:00</th>
+            <td rowspan="2">1709<br><strong>Gestió de bases de dades</strong><br><em>Julián
+                Garcia</em><br>Aula 101</td>
+          </tr>
+          <tr>
+            <th>17:00</th>
+            <td>0369<br><strong>Implantació de sistemes
+                informàtics</strong><br><em>Ferran Sanabria</em><br>Aula 101</td>
+            <td>1709<br><strong>Gestió de bases de dades</strong><br><em>Julián
+                Garcia</em><br>Aula 101</td>
+            <td>0179<br><strong>Anglès professional</strong><br><em>Lluís Casteller</em><br>Aula 101
+            </td>
+            <td>0370<br><strong>Planificació i administració de
+                xarxes</strong><br><em>Jaume Fernandez</em><br>Aula polivalent</td>
+          </tr>
+          <tr>
+            <th>18:00</th>
+            <td colspan="5">Pati</td>
+          </tr>
+          <tr>
+            <th>18:20</th>
+            <td rowspan="2">0370<br><strong>Planificació i administració de
+                xarxes</strong><br><em>Jaume Fernandez</em><br>Aula polivalent</td>
+            <td>0371<br><strong>Fonaments de maquinari</strong><br><em>Jordi Foixench</em><br>Aula
+              101</td>
+            <td>0371<br><strong>Fonaments de maquinari</strong><br><em>Jordi Foixench</em><br>Aula
+              101</td>
+            <td>0179<br><strong>Anglès professional</strong><br><em>Lluís Casteller</em><br>Aula 101
+            </td>
+            <td rowspan="3">Lliure</td>
+          </tr>
+          <tr>
+            <th>19:20</th>
+            <td><strong>Tutoria</strong><br><em>Jordi Foixench</em><br>Aula 101</td>
+            <td rowspan="2">0369<br><strong>Implantació de sistemes
+                informàtics</strong><br><em>Ferran Sanabria</em><br>Aula 101</td>
+            <td rowspan="2">0369<br><strong>Implantació de sistemes
+                informàtics</strong><br><em>Ferran Sanabria</em><br>Aula 101</td>
+          </tr>
+          <tr>
+            <th>20:20</th>
+            <td>Llirue</td>
+            <td>Lliure</td>
+          </tr>
         </tbody>
         <tfoot>
-          Totes les classes s'inicien a les 15:30 excepte Dimarts i Dimecres.
+          <tr>
+            <td colspan="6">Totes les classes s'inicien a les 08:00 excepte dijous i divendres.</td>
+          </tr>
         </tfoot>
       </table>
     </main>
     <footer>
-
+      <p>&copy; Max Martínez Altimira. Institut Carles Vallbona. Carrer del Camp de les Moreres, 14,
+        08401 Granollers, Barcelona</p>
     </footer>
   </body>
 </html>
