--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           <li>
             <a href="./03-horari-classe/index.html">03-Horari-Classe</a>
           </li>
+          <li>
+            <a href="./04-torneig-esports/index.html">04-Torneig-Esports</a>
+          </li>
         </ul>
       </nav>
     </main>
