--- a/04-torneig-esports/index.html
+++ b/04-torneig-esports/index.html
@@ -132,7 +132,7 @@
           semifinals.</p>
         <p><strong>Final:</strong> Final presencial amb retransmissió en directe.</p>
         <p>Les dates específiques de cada fase es publiquen al <a
-            href="calendari.html">calendari</a>.</p>
+            href="./pages/calendari.html">calendari</a>.</p>
       </section>
       <section>
         <h2>Notícies</h2>
