Update Index i afegiment exercicis CSS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <main>
-      <h1>Índex principal del bloc exercicis</h1>
+      <h1>Índex principal d'exercicis d'HTML</h1>
       <p>Creat per Max Martínez</p>
+      <h2>Exercicis HTML bloc</h2>
       <nav>
         <ul>
           <li>
@@ -33,6 +34,17 @@
         </ul>
       </nav>
       <p>De moment estàn fets els exercicis 1-4.</p>
+      <h2>Exercicis CSS</h2>
+      <nav>
+        <ul>
+          <li>
+            <a href="./01-css-selectors-basics/index.html">01-Selectors-Bàsics</a>
+          </li>
+          <li>
+            <a href="./02-css-propietats-portfolio/index.html">02-Propietats-Portfolio</a>
+          </li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
