--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
           <li>
             <a href="./05-icv-components/index.html">05-ICV-Components.cat</a>
           </li>
-          <li><a href="./06-coleccio-videojocs/index.html">06-Col·lecció-Videojocs</a></li>
-          <li><a href="./07-youtube/index.html">07-Youtube-Estimo</a></li>
-          <li><a href="./08-curs-online/index.html">08-Curs-Online</a></li>
-          <li><a href="./09-enquesta-definitiva/index.html">09-Enquesta-Definitiva</a></li>
+          <li>
+            <a href="./06-coleccio-videojocs/index.html">06-Col·lecció-Videojocs</a>
+          </li>
+          <li>
+            <a href="./07-youtube/index.html">07-Youtube-Estimo</a>
+          </li>
+          <li>
+            <a href="./08-curs-online/index.html">08-Curs-Online</a>
+          </li>
+          <li>
+            <a href="./09-enquesta-definitiva/index.html">09-Enquesta-Definitiva</a>
+          </li>
         </ul>
       </nav>
       <p>De moment estàn fets els exercicis 1-4.</p>
