Preparació i afegiment icones d'exercicis 5-9

--- a/08-curs-online/index.html
+++ b/08-curs-online/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DESCRIPCIO">
-    <title>TITOL</title>
+    <meta name="description" content="Formulari d'Inscripció del curs Online">
+    <title>Inscripció curs Online</title>
     <meta name="author" content="Max Martínez">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" defer></script>
 </head>
 <body>
     <header>
