Modificació de tasques CSS per a incloure un retorn a l'índex principal

--- a/02-css-propietats-portfolio/index.html
+++ b/02-css-propietats-portfolio/index.html
@@ -11,6 +11,7 @@
     <div class="container-portfolio">
       <!-- HEADER - INFO PERSONAL -->
       <header>
+          <p><a href="../index.html">Tornar a l'Índex principal</a></p>
         <img src="./img/avatar.webp" alt="Foto de perfil de Pep Guardiola">
         <h1 id="nom-principal">Pep Guardiola</h1>
         <p class="rol-professional">Desenvolupador Web Full Stack</p>
