--- a/01-css-selectors-basics/index.html
+++ b/01-css-selectors-basics/index.html
@@ -18,6 +18,7 @@
         <li><a href="#inici">Inici</a></li>
         <li><a href="#jo-mateix">Sobre mi</a></li>
         <li><a href="#contacte">Contacte</a></li>
+        <li><a href="../index.html">Tornar a l'Índex principal</a></li>
       </ul>
     </nav>
     <main>
