--- a/08-curs-online/index.html
+++ b/08-curs-online/index.html
@@ -1,87 +1,89 @@
 <!DOCTYPE html>
 <html lang="ca">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Formulari d'Inscripció del curs Online de programació Web">
     <title>Inscripció curs programació web</title>
     <meta name="author" content="Max Martínez">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Inscripció al Curs Online de Programació WEB</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Tornar a l'índex principal</a></li>
-            </ul>
-        </nav>
+      <h1>Inscripció al Curs Online de Programació WEB</h1>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Tornar a l'índex principal</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <form method="get">
-            <fieldset>
-                <legend>Dades personals</legend>
-                <label for="name">Nom i cognoms:</label><br>
-                <input type="text" minlength="3" id="name" maxlength="20" required><br><br>
-                <label for="email">Correu electrònic:</label><br>
-                <input type="email" required id="email"><br><br>
-                <label for="tel">Telèfon:</label><br>
-                <input type="tel" required pattern="+34123456789"><br><br>
-                <label for="data">Data de naixement:</label><br>
-                <input type="date" required><br>
-            </fieldset>
-            <fieldset>
-                <legend>Tipus de Curs i Experiència prèvia</legend>
-                <label>Cursos seleccionats:</label><br>
-                <select name="cursos" multiple required>
-                    <optgroup label="FrontEnd">
-                        <option value="HTML">HTML</option>
-                        <option value="CSS">CSS</option>
-                    </optgroup>
-                    <optgroup label="BackEnd">
-                        <option value="JS">JavaScript</option>
-                        <option value="PHP">PHP</option>
-                    </optgroup>
-                </select><br><br>
-                <label>Experiència prèvia:</label><br>
-                <input required type="radio" id="novell" name="xp" value="1">
-                <label for="novell">Novell</label><br>
-                <input required type="radio" id="intermedi" name="xp" value="2">
-                <label for="intermedi">Intermedi</label><br>
-                <input required type="radio" id="adv" name="xp" value="3">
-                <label for="adv">Avançat</label><br>
-            </fieldset>
-            <fieldset>
-                <legend>Interessos i motivació del curs:</legend>
-                <label for="interessos">Interessos:</label><br>
-                <label>Projectes pràctics</label>
-                <input type="checkbox" id="interessos1" name="practiques" value="practiques"><br>
-                <label>Tutories Online</label>
-                <input type="checkbox" id="interessos2" name="tutories" value="tutories"><br>
-                <label>Certificats</label>
-                <input type="checkbox" id="interessos3" name="certificats" value="certificats"><br><br>
-                <label>Explica breument per què vols realitzar els cursos</label><br>
-                <textarea required minlength="1" maxlength="200"></textarea><br><br>
-                <label>Lloc de treball interessat:</label><br>
-                <input list="treball" name="treball">
-                <datalist id="treball">
-                    <option value="Ciberseguretat"></option>
-                    <option value="DevOps"></option>
-                    <option value="FrontEnd"></option>
-                    <option value="BackEnd"></option>
-                </datalist>
-            </fieldset>
-            <fieldset>
-                <legend>CV i acceptació de condicions</legend>
-                <label>Inserir CV en format PDF</label><br>
-                <input type="file" accept="application/pdf" name="cv" required><br><br>
-                <input type="checkbox" required value="terms"><label>Accepto els <a target="_blank" href="pages/termesicondicions.html">termes i condicions del formulari d'inscripció</a></label><br><br>
-                <input type="submit">
-            </fieldset>
-        </form>
+      <form method="get">
+        <fieldset>
+          <legend>Dades personals</legend>
+          <label for="name">Nom i cognoms:</label><br>
+          <input type="text" minlength="3" id="name" maxlength="20" required><br><br>
+          <label for="email">Correu electrònic:</label><br>
+          <input type="email" required id="email"><br><br>
+          <label for="tel">Telèfon:</label><br>
+          <input type="tel" required pattern="+34123456789"><br><br>
+          <label for="data">Data de naixement:</label><br>
+          <input type="date" required><br>
+        </fieldset>
+        <fieldset>
+          <legend>Tipus de Curs i Experiència prèvia</legend>
+          <label>Cursos seleccionats:</label><br>
+          <select name="cursos" multiple required>
+            <optgroup label="FrontEnd">
+              <option value="HTML">HTML</option>
+              <option value="CSS">CSS</option>
+            </optgroup>
+            <optgroup label="BackEnd">
+              <option value="JS">JavaScript</option>
+              <option value="PHP">PHP</option>
+            </optgroup>
+          </select><br><br>
+          <label>Experiència prèvia:</label><br>
+          <input required type="radio" id="novell" name="xp" value="1">
+          <label for="novell">Novell</label><br>
+          <input required type="radio" id="intermedi" name="xp" value="2">
+          <label for="intermedi">Intermedi</label><br>
+          <input required type="radio" id="adv" name="xp" value="3">
+          <label for="adv">Avançat</label><br>
+        </fieldset>
+        <fieldset>
+          <legend>Interessos i motivació del curs:</legend>
+          <label for="interessos">Interessos:</label><br>
+          <label>Projectes pràctics</label>
+          <input type="checkbox" id="interessos1" name="practiques" value="practiques"><br>
+          <label>Tutories Online</label>
+          <input type="checkbox" id="interessos2" name="tutories" value="tutories"><br>
+          <label>Certificats</label>
+          <input type="checkbox" id="interessos3" name="certificats" value="certificats"><br><br>
+          <label>Explica breument per què vols realitzar els cursos</label><br>
+          <textarea required minlength="1" maxlength="200"></textarea><br><br>
+          <label>Lloc de treball interessat:</label><br>
+          <input list="treball" name="treball">
+          <datalist id="treball">
+            <option value="Ciberseguretat"></option>
+            <option value="DevOps"></option>
+            <option value="FrontEnd"></option>
+            <option value="BackEnd"></option>
+          </datalist>
+        </fieldset>
+        <fieldset>
+          <legend>CV i acceptació de condicions</legend>
+          <label>Inserir CV en format PDF</label><br>
+          <input type="file" accept="application/pdf" name="cv" required><br><br>
+          <input type="checkbox" required value="terms"><label>Accepto els <a target="_blank"
+              href="pages/termesicondicions.html">termes i condicions del formulari
+              d'inscripció</a></label><br><br>
+          <input type="submit">
+        </fieldset>
+      </form>
     </main>
     <footer>
-        <p>&copy; Max Martínez Altimira, max_martinezaltimira@iescarlesvallbona.cat, 123456789</p>
+      <p>&copy; Max Martínez Altimira, max_martinezaltimira@iescarlesvallbona.cat, 123456789</p>
     </footer>
-</body>
+  </body>
 </html>
