--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
         </ul>
       </nav>
-      <p>De moment estàn fets els exercicis 1-4.</p>
+      <p>De moment estàn fets els exercicis 1-4 i 8 i 9.</p>
       <h2>Exercicis CSS</h2>
       <nav>
         <ul>
@@ -53,6 +53,7 @@
           </li>
         </ul>
       </nav>
+      <p>Tot fet de moment.</p>
     </main>
   </body>
 </html>
