--- a/08-curs-online/index.html
+++ b/08-curs-online/index.html
@@ -26,9 +26,9 @@
           <label for="email">Correu electrònic:</label><br>
           <input type="email" required id="email"><br><br>
           <label for="tel">Telèfon:</label><br>
-          <input type="tel" required pattern="+34123456789"><br><br>
-          <label for="data">Data de naixement:</label><br>
-          <input type="date" required><br>
+          <input type="tel" id="tel" required pattern="+34123456789"><br><br>
+          <label for="naixement">Data de naixement:</label><br>
+          <input type="date" id="naixement" required><br>
         </fieldset>
         <fieldset>
           <legend>Tipus de Curs i Experiència prèvia</legend>
@@ -53,7 +53,7 @@
         </fieldset>
         <fieldset>
           <legend>Interessos i motivació del curs:</legend>
-          <label for="interessos">Interessos:</label><br>
+          <label>Interessos:</label><br>
           <label>Projectes pràctics</label>
           <input type="checkbox" id="interessos1" name="practiques" value="practiques"><br>
           <label>Tutories Online</label>
