Canvi Num Exercici i afegiment exercici 2 CSS

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             <a href="./01-css-selectors-basics/index.html">01-Selectors-Bàsics</a>
           </li>
           <li>
-            <a href="./02-css-propietats-portfolio/index.html">02-Propietats-Portfolio</a>
+            <a href="./02-model-caixa-css/index.html">02-Model-Caixa</a>
+          </li>
+          <li>
+            <a href="./03-css-propietats-portfolio/index.html">03-Propietats-Portfolio</a>
           </li>
         </ul>
       </nav>
