--- a/02-model-caixa-css/index.html
+++ b/02-model-caixa-css/index.html
@@ -32,7 +32,7 @@
         </section>
       </main>
       <footer>
-        <p>&copy; 2026 - Tots els drets reservats [Nom i Cognoms]</p>
+        <p>&copy; 2026 - Tots els drets reservats Max Martínez Altimira</p>
         <button id="boto-unic">Botó per diferènciar de la resta</button>
       </footer>
     </div>
