--- a/02-model-caixa-css/index.html
+++ b/02-model-caixa-css/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
+    <a href="../index.html">Tornar a l'Índex principal</a>
     <div id="pagina">
       <header>
         <h1>El Meu Portfolio Bàsic</h1>
