--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
         </ul>
       </nav>
       <p>Tot fet de moment.</p>
+      <h2>Exercicis JavaScript</h2>
+      <nav>
+        <ul>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici1/index.html">Exercici 1 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici2/index.html">Exercici 2 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici3/index.html">Exercici 3 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici4/index.html">Exercici 4 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici5/index.html">Exercici 5 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici6/index.html">Exercici 6 - DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/01-exercicis-gestio-dom/exercici7/index.html">Exercici 7 - DOM</a>
+          </li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
