--- a/JavaScriptE/01-exercicis-gestio-dom/exercici1/index.html
+++ b/JavaScriptE/01-exercicis-gestio-dom/exercici1/index.html
@@ -28,10 +28,10 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Afegir "Espasa de diamant" --&gt; caixa 1</li>
-          <li>[ ] Afegir "Torxa x64" --&gt; caixa 5</li>
-          <li>[ ] Afegir "Pa x12" --&gt; caixa 9</li>
-          <li>[ ] Final: Afegir més objectes als slots buits!</li>
+          <li>[X] Afegir "Espasa de diamant" --&gt; caixa 1</li>
+          <li>[X] Afegir "Torxa x64" --&gt; caixa 5</li>
+          <li>[X] Afegir "Pa x12" --&gt; caixa 9</li>
+          <li>[X] Final: Afegir més objectes als slots buits!</li>
         </ul>
       </div>
     </div>
