--- a/JavaScriptE/01-exercicis-gestio-dom/exercici2/index.html
+++ b/JavaScriptE/01-exercicis-gestio-dom/exercici2/index.html
@@ -57,13 +57,13 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Actualitzar el nom del Pokémon</li>
-          <li>[ ] Actualitzar els PS amb template literals</li>
-          <li>[ ] Actualitzar l'Atac amb template literals</li>
-          <li>[ ] Actualitzar la Defensa amb template literals</li>
-          <li>[ ] Actualitzar la Velocitat amb template literals</li>
-          <li>[ ] Final: Actualitza l'amplada de les barres visuals</li>
-          <li>[ ] Opcional: Fes que Pikachu evolucioni a Raichu</li>
+          <li>[X] Actualitzar el nom del Pokémon</li>
+          <li>[X] Actualitzar els PS amb template literals</li>
+          <li>[X] Actualitzar l'Atac amb template literals</li>
+          <li>[X] Actualitzar la Defensa amb template literals</li>
+          <li>[X] Actualitzar la Velocitat amb template literals</li>
+          <li>[X] Final: Actualitza l'amplada de les barres visuals</li>
+          <li>[X] Opcional: Fes que Pikachu evolucioni a Raichu</li>
         </ul>
       </div>
     </div>
