--- a/JavaScriptE/01-exercicis-gestio-dom/exercici3/index.html
+++ b/JavaScriptE/01-exercicis-gestio-dom/exercici3/index.html
@@ -28,9 +28,9 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Seleccionar el div #ranking</li>
-          <li>[ ] Crear una llista (ul) amb els 3 primers jugadors</li>
-          <li>[ ] Afegir un 4t jugador amb el teu nom</li>
+          <li>[X] Seleccionar el div #ranking</li>
+          <li>[X] Crear una llista (ul) amb els 3 primers jugadors</li>
+          <li>[X] Afegir un 4t jugador amb el teu nom</li>
           <li>[ ] Opcional: Afegir més jugadors amb diferents puntuacions!</li>
         </ul>
       </div>
