--- a/JavaScriptE/01-exercicis-gestio-dom/exercici5/index.html
+++ b/JavaScriptE/01-exercicis-gestio-dom/exercici5/index.html
@@ -76,13 +76,13 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Eliminar totes les classes de la barra</li>
-          <li>[ ] Crea estructures if/else per comprovar la vida</li>
-          <li>[ ] Afegir la classe correcta segons la vida</li>
-          <li>[ ] Actualitzar l'amplada de la barra amb width</li>
-          <li>[ ] Actualitzar el text dels punts de vida</li>
-          <li>[ ] Actualitzar el percentatge visual</li>
-          <li>[ ] Experimenta: Provar amb diferents valors de vida!</li>
+          <li>[X] Eliminar totes les classes de la barra</li>
+          <li>[X] Crea estructures if/else per comprovar la vida</li>
+          <li>[X] Afegir la classe correcta segons la vida</li>
+          <li>[X] Actualitzar l'amplada de la barra amb width</li>
+          <li>[X] Actualitzar el text dels punts de vida</li>
+          <li>[X] Actualitzar el percentatge visual</li>
+          <li>[X] Experimenta: Provar amb diferents valors de vida!</li>
         </ul>
         <div class="consell">
           💡 <strong>Experimenta:</strong> Canvia el valor de la variable <code>hp</code> al
