--- a/JavaScriptE/01-exercicis-gestio-dom/exercici6/index.html
+++ b/JavaScriptE/01-exercicis-gestio-dom/exercici6/index.html
@@ -69,17 +69,17 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] LINK: Canviar imatge a versió Master Sword</li>
-          <li>[ ] LINK: Actualitzar atribut alt</li>
-          <li>[ ] LINK: Actualitzar atribut title</li>
-          <li>[ ] LINK: Activar botó (eliminar disabled)</li>
-          <li>[ ] MARIO: Canviar imatge a versió Fire Mario</li>
-          <li>[ ] MARIO: Actualitzar atributs alt i title</li>
-          <li>[ ] MARIO: Activar botó</li>
-          <li>[ ] SONIC: Canviar imatge a versió Super Sonic</li>
-          <li>[ ] SONIC: Actualitzar atributs alt i title</li>
-          <li>[ ] SONIC: Activar botó</li>
-          <li>[ ] Personalitzar noms i modes (LINK, MARIO i SONIC)</li>
+          <li>[X] LINK: Canviar imatge a versió Master Sword</li>
+          <li>[X] LINK: Actualitzar atribut alt</li>
+          <li>[X] LINK: Actualitzar atribut title</li>
+          <li>[X] LINK: Activar botó (eliminar disabled)</li>
+          <li>[X] MARIO: Canviar imatge a versió Fire Mario</li>
+          <li>[X] MARIO: Actualitzar atributs alt i title</li>
+          <li>[X] MARIO: Activar botó</li>
+          <li>[X] SONIC: Canviar imatge a versió Super Sonic</li>
+          <li>[X] SONIC: Actualitzar atributs alt i title</li>
+          <li>[X] SONIC: Activar botó</li>
+          <li>[X] Personalitzar noms i modes (LINK, MARIO i SONIC)</li>
         </ul>
       </div>
     </div>
