Nous exercicis Programacio DOM

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
           <li>
             <a href="JavaScriptE/01-exercicis-gestio-dom/exercici7/index.html">Exercici 7 - DOM</a>
           </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici1/index.html">Exercici 1 - PROG DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici2/index.html">Exercici 1 - PROG DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici3/index.html">Exercici 1 - PROG DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici4/index.html">Exercici 1 - PROG DOM</a>
+          </li>
         </ul>
       </nav>
     </main>
