--- a/JavaScriptE/02-programacio-dom/exercici1/index.html
+++ b/JavaScriptE/02-programacio-dom/exercici1/index.html
@@ -110,21 +110,21 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Establir monedes inicials del jugador (15000₽)</li>
-          <li>[ ] Actualitzar el número de monedes al DOM</li>
-          <li>[ ] Comprar 3 Poké Balls (200₽ cadascuna)</li>
-          <li>[ ] Calcular el cost total de les Poké Balls</li>
-          <li>[ ] Restar el cost de les monedes del jugador</li>
-          <li>[ ] Actualitzar les monedes al DOM</li>
-          <li>[ ] Afegir les Poké Balls a l'inventari (DOM)</li>
-          <li>[ ] Comprar 4 Superpocions (700₽ cadascuna)</li>
-          <li>[ ] Actualitzar monedes i inventari</li>
-          <li>[ ] Comprar 2 Ultra Balls (1200₽ cadascuna)</li>
-          <li>[ ] Actualitzar les monedes i l'inventari</li>
-          <li>[ ] Mostrar el resum de compres al DOM</li>
-          <li>[ ] Intentar comprar 1 Master Ball (1000000₽)</li>
-          <li>[ ] Comprovar si tens suficients monedes</li>
-          <li>[ ] Afegeix la Master Ball a l'inventari si tens prou monedes</li>
+          <li>[X] Establir monedes inicials del jugador (15000₽)</li>
+          <li>[X] Actualitzar el número de monedes al DOM</li>
+          <li>[X] Comprar 3 Poké Balls (200₽ cadascuna)</li>
+          <li>[X] Calcular el cost total de les Poké Balls</li>
+          <li>[X] Restar el cost de les monedes del jugador</li>
+          <li>[X] Actualitzar les monedes al DOM</li>
+          <li>[X] Afegir les Poké Balls a l'inventari (DOM)</li>
+          <li>[X] Comprar 4 Superpocions (700₽ cadascuna)</li>
+          <li>[X] Actualitzar monedes i inventari</li>
+          <li>[X] Comprar 2 Ultra Balls (1200₽ cadascuna)</li>
+          <li>[X] Actualitzar les monedes i l'inventari</li>
+          <li>[X] Mostrar el resum de compres al DOM</li>
+          <li>[X] Intentar comprar 1 Master Ball (1000000₽)</li>
+          <li>[X] Comprovar si tens suficients monedes</li>
+          <li>[X] Afegeix la Master Ball a l'inventari si tens prou monedes</li>
         </ul>
       </div>
     </div>
