--- a/JavaScriptE/02-programacio-dom/exercici2/index.html
+++ b/JavaScriptE/02-programacio-dom/exercici2/index.html
@@ -181,21 +181,21 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Establir stats del jugador (nom, atac, defensa, velocitat i vida)</li>
-          <li>[ ] Establir stats de l'enemic (nom, atac, defensa, velocitat i vida)</li>
-          <li>[ ] Establir el percentatge de les barres de vida</li>
-          <li>[ ] Actualitzar els stats al DOM</li>
-          <li>[ ] Calcular el dany normal del jugador</li>
-          <li>[ ] Calcular el dany crític del jugador (x2)</li>
-          <li>[ ] Calcular el dany normal de l'enemic</li>
-          <li>[ ] Calcular el dany crític de l'enemic (x2)</li>
-          <li>[ ] Calcular la probabilitat de crític (velocitat/5)</li>
-          <li>[ ] Calcular la probabilitat d'esquivar (velocitat/6)</li>
-          <li>[ ] Calcular els torns necessaris per guanyar (només jugador)</li>
-          <li>[ ] Calcular vida restant després del combat (només jugador)</li>
-          <li>[ ] Determinar qui ataca primer (qui tingui més velocitat)</li>
-          <li>[ ] Calcular la probabilitat de victòria del jugador</li>
-          <li>[ ] Activitat grupal SIMULAR UN TORN DE COMBAT</li>
+          <li>[X] Establir stats del jugador (nom, atac, defensa, velocitat i vida)</li>
+          <li>[X] Establir stats de l'enemic (nom, atac, defensa, velocitat i vida)</li>
+          <li>[X] Establir el percentatge de les barres de vida</li>
+          <li>[X] Actualitzar els stats al DOM</li>
+          <li>[X] Calcular el dany normal del jugador</li>
+          <li>[X] Calcular el dany crític del jugador (x2)</li>
+          <li>[X] Calcular el dany normal de l'enemic</li>
+          <li>[X] Calcular el dany crític de l'enemic (x2)</li>
+          <li>[X] Calcular la probabilitat de crític (velocitat/5)</li>
+          <li>[X] Calcular la probabilitat d'esquivar (velocitat/6)</li>
+          <li>[X] Calcular els torns necessaris per guanyar (només jugador)</li>
+          <li>[X] Calcular vida restant després del combat (només jugador)</li>
+          <li>[X] Determinar qui ataca primer (qui tingui més velocitat)</li>
+          <li>[X] Calcular la probabilitat de victòria del jugador</li>
+          <li>[X] Activitat grupal SIMULAR UN TORN DE COMBAT</li>
         </ul>
       </div>
     </div>
