Exercici 4 Programació DOM

--- a/JavaScriptE/02-programacio-dom/exercici4/index.html
+++ b/JavaScriptE/02-programacio-dom/exercici4/index.html
@@ -94,18 +94,18 @@
       <div class="checklist">
         <h3>✅ Checklist de Tasques:</h3>
         <ul>
-          <li>[ ] Establir vida i defensa de la casa</li>
-          <li>[ ] Actualitzar stats de la casa al DOM</li>
-          <li>[ ] Processar Onada 1: Zombies Caracubo (dany baix)</li>
-          <li>[ ] Calcular dany rebut amb if/else</li>
-          <li>[ ] Actualitzar vida de la casa</li>
-          <li>[ ] Actualitzar la barra de vida visualment</li>
-          <li>[ ] Determinar nivell d'alerta (Normal/Alerta/Crític)</li>
-          <li>[ ] Processar Onada 2: Zombies Pirates (dany mitjà)</li>
-          <li>[ ] Processar Onada 3: Zombies Cowboys (dany alt)</li>
-          <li>[ ] Processar Onada 4: Dr. Zombi Boss (dany massiu)</li>
-          <li>[ ] Calcular resum final de la defensa</li>
-          <li>[ ] Determinar si la casa sobreviu (estatFinal)</li>
+          <li>[X] Establir vida i defensa de la casa</li>
+          <li>[X] Actualitzar stats de la casa al DOM</li>
+          <li>[X] Processar Onada 1: Zombies Caracubo (dany baix)</li>
+          <li>[X] Calcular dany rebut amb if/else</li>
+          <li>[X] Actualitzar vida de la casa</li>
+          <li>[X] Actualitzar la barra de vida visualment</li>
+          <li>[X] Determinar nivell d'alerta (Normal/Alerta/Crític)</li>
+          <li>[X] Processar Onada 2: Zombies Pirates (dany mitjà)</li>
+          <li>[X] Processar Onada 3: Zombies Cowboys (dany alt)</li>
+          <li>[X] Processar Onada 4: Dr. Zombi Boss (dany massiu)</li>
+          <li>[X] Calcular resum final de la defensa</li>
+          <li>[X] Determinar si la casa sobreviu (estatFinal)</li>
         </ul>
       </div>
     </div>
