Afegir exercicis nous DOM

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
           <li>
             <a href="JavaScriptE/02-programacio-dom/exercici4/index.html">Exercici 4 - PROG DOM</a>
           </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici5/index.html">Exercici 5 - PROG DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici6/index.html">Exercici 6 - PROG DOM</a>
+          </li>
+          <li>
+            <a href="JavaScriptE/02-programacio-dom/exercici7/index.html">Exercici 7 - PROG DOM</a>
+          </li>
         </ul>
       </nav>
     </main>
